Better look of the default pricing page

--- a/billing/templates/billing/public/pricing.html
+++ b/billing/templates/billing/public/pricing.html
@@ -1,7 +1,20 @@
 {% extends "core/base_bs.html" %}
-{% load i18n staticfiles humanize currency %}
+{% load i18n static humanize currency %}
 
-{% block page_title %}<title>{% trans "Pricing" %} - {{ service.project_name }} </title>{% endblock %}
+{% block meta %}
+    <meta name="abstract" content="{{ service.project_name }} - {{ module_pricing.title }}" />
+    <meta name="description" content="{{ module_pricing.content }}" />
+    <meta property="og:title" content="{{ service.project_name }} - {{ module_pricing.title }}" />
+    {% if module_pricing.image.name %}
+        <meta property="og:image" content="{% get_media_prefix %}{{ module_pricing.image.name }}" />
+    {% else %}
+        <meta property="og:image" content="{% get_media_prefix %}{{ config.logo.name }}" />
+    {% endif %}
+    <meta property="og:description" content="{{ module_pricing.content }}" />
+    <meta property="og:site_name" content="{{ service.domain|upper }}" />
+{% endblock %}
+
+{% block page_title %}<title>{{ module_pricing.title }} - {{ service.project_name }} </title>{% endblock %}
 {% block head_style %}
     {{ block.super }}
     <link rel='stylesheet' href="{% static 'ikwen/css/pricing.css' %}" />
@@ -11,32 +24,50 @@
 {% endblock %}
 
 {% block content %}
-    <div id="content" class="container">
-{#        <div class="text-center">#}
-{#            <img src=""/>#}
-{#        </div>#}
-        <div>
-        {% for product in product_list %}
-            <div class="col-sm-4 col-lg-3">
-                <div class="product">
-                    <h2 class="cost">
-                        <span>{{ product.cost|floatformat:"0"|intcomma }}</span>
-                        <sup class="currency text-muted">XAF{{ CURRENCY.symbol }}</sup>
-                    </h2>
-                    <p class="text-center name">
-                        <strong class="text-muted">{{ product.duration_text }}</strong>
-                    </p>
-                    <div class="description text-muted">
-                        <p>{{ product.short_description|safe }}</p>
+    <div id="content">
+        <div class="container">
+            <h2>{{ module_pricing.title }}</h2>
+            <div style="margin-top: 30px">
+                <p>{{ module_pricing.content|safe }}</p>
+                {% if module_pricing.image.name %}
+                    <div class="text-center">
+                        <img src="{{ module_pricing.image.url }}" style="margin: 30px auto 0" class="img-responsive" />
                     </div>
-                    <button class="btn btn-sm btn-warning cta btn-block choose" data-id="{{ product.id }}" data-toggle="modal"
-                            {% if user.is_anonymous %}data-target="#login-to-continue"{% endif %}>{% trans "Buy Now" %}</button>
-                </div>
+                {% endif %}
             </div>
-        {% endfor %}
+            {% if not module_pricing.image.name %}
+                <div style="height: 2px; margin: 30px 0 40px; overflow: hidden">
+                    <div class="col-xs-3" style="height: 2px; background: #E53935"></div>
+                    <div class="col-xs-3" style="height: 2px; background: #FFC107"></div>
+                    <div class="col-xs-3" style="height: 2px; background: #5E35B1"></div>
+                    <div class="col-xs-3" style="height: 2px; background: #00BCD4"></div>
+                </div>
+            {% endif %}
+            <div class="row">
+            {% for product in product_list %}
+                <div class="col-sm-4 col-lg-3 product-container">
+                    <div class="product">
+                        <h2 class="cost">
+                            <span>{{ product.cost|floatformat:"0"|intcomma }}</span>
+                            <sup class="currency">XAF{{ CURRENCY.symbol }}</sup>
+                        </h2>
+                        <p class="text-center name">
+                            <strong class="text-muted">{{ product.duration_text }}</strong>
+                        </p>
+                        <div class="description text-muted">
+                            {{ product.short_description|safe }}
+                        </div>
+                        <button class="btn btn-sm btn-warning cta btn-block choose" data-id="{{ product.id }}" data-toggle="modal"
+                                {% if user.is_anonymous %}data-target="#login-to-continue"{% endif %}>{% trans "Buy Now" %}</button>
+                    </div>
+                </div>
+            {% endfor %}
+            </div>
         </div>
     </div>
+    {% with payment_conf='subscription' %}
     {% include 'billing/snippets/modal_payment_options.html' %}
+    {% endwith %}
     <div class="modal fade" id="login-to-continue" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content modal-info">
@@ -75,6 +106,24 @@
                     $('form#checkout').attr('action', actionURL).submit();
                 });
             {% endif %}
+            var winWidth = $(window).width(),
+                count = $('.product').length,
+                shift = 0;
+            if (winWidth >= 1200) {
+                switch (count) {
+                    case 1: shift = 4; break;
+                    case 2: shift = 3; break;
+                    case 3: shift = 1; break;
+                }
+                $('.product:first').parent().addClass('col-lg-offset-' + shift);
+            } else if (winWidth >= 768) {
+                switch (count) {
+                    case 1: shift = 4; break;
+                    case 2: shift = 2; break;
+                }
+                $('.product:first').parent().addClass('col-sm-offset-' + shift);
+            }
+
         })()
     </script>
     {{ config.scripts|safe }}
