--- a/billing/templates/billing/subscription_list.html
+++ b/billing/templates/billing/subscription_list.html
@@ -3,48 +3,27 @@
 {% load i18n humanize staticfiles auth_tokens %}
 
 {% block page_title %}
-<title>{% trans "Products" %} - {{ service.project_name }}</title>
+<title>{% trans "Subscriptions" %} - {{ service.project_name }}</title>
 {% endblock %}
 
 {% block head_style %}
     {{ block.super }}
     <style>
-        #results {clear: both}
+        .date .fa-circle.color-active {color: transparent}
     </style>
 {% endblock %}
 
 {% block breadcrumb_location %}
-    <li>{% trans "Products" %}</li>
+    <li>{% trans "Subscriptions" %}</li>
 {% endblock %}
 
 {% block admin_content %}
     <div id="admin-content">
         <div class="container-fluid">
-            <div id="results">
-                <ul class="object-list" style="padding: 20px 0 0 0">
-                {% for product in product_list %}
-                    <li class="ik-li mean" id="{{ product.id }}" data-id="{{ product.id }}">
-                        <div class="info">
-                            <a href="{% url 'billing:change_product' product.id %}" class="name" style="float: left">{{ product.name }}</a>
-                        </div>
-                        <div class="actions">
-                            {% if product.is_active %}
-                                <i class="action glyphicon glyphicon-ok toggle active off" title="{% trans "Deactivate" %}"></i>
-                            {% else %}
-                                <i class="action glyphicon glyphicon-ok toggle active on" title="{% trans "Activate" %}"></i>
-                            {% endif %}
-                            <i class="glyphicon glyphicon-trash trash" title="{% trans "Delete item" %}"></i>
-                        </div>
-                    </li>
-                {% endfor %}
-                </ul>
-                <div class="add-new-tile">
-                    <p>
-                        <span class="search-text"></span>
-                        <a href="{% url 'billing:change_product' %}"
-                           class="btn btn-sm btn-success" style="margin-left: 6px; min-width: 90px">{% trans "Add" %}</a>
-                    </p>
-                </div>
+            {% include 'core/snippets/admin_tools.html' %}
+            <div id="results" style="clear: both">
+                {% include 'core/snippets/spinner.html' %}
+                {% include 'billing/snippets/subscription_list_results.html' %}
             </div>
         </div>
     </div>
@@ -54,7 +33,7 @@
     {{ block.super }}
     <script type="text/javascript">
         (function() {
-            $('div#admin-nav .subscription-plans').addClass('active');
+            $('div#admin-nav .subscriptions').addClass('active');
         })()
     </script>
 {% endblock %}
