app-retail.css replaced by change-form.css

--- a/partnership/templates/partnership/service_detail.html
+++ b/partnership/templates/partnership/service_detail.html
@@ -7,7 +7,7 @@
 
 {% block head_style %}
     {{ block.super }}
-    <link rel='stylesheet' href="{% static 'ikwen/css/app-retail.css' %}" />
+    <link rel='stylesheet' href="{% static 'ikwen/css/change-form.css' %}" />
 {% endblock %}
 
 {% block breadcrumb_location %}
@@ -104,11 +104,3 @@
     </div>
 {% endblock %}
 
-{% block js %}
-    {{ block.super }}
-    <script type="text/javascript">
-        (function() {
-
-        })()
-    </script>
-{% endblock %}
