--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -36,6 +36,9 @@ body {color: #545454}
 #content .errorlist.username, #content .errorlist.phone {padding-left: 18px}
 #content .errorlist.username li, #content .errorlist.phone li {list-style-type: disc}
 
+.payment-method {display: block;cursor: pointer;margin-bottom: 1em;}
+.payment-method a {display: block; text-align: center}
+
 .spinner-container {-webkit-animation: rotate 2s linear infinite; animation: rotate 2s linear infinite; z-index: 2}
 .spinner-container .path {
   stroke-dasharray: 1,150;
@@ -71,6 +74,9 @@ body {color: #545454}
 .status-bullet.primary {background: #3498db}
 .status-bullet.success {background: #2ab732}
 .status-bullet.danger, .status-bullet.canceled, .status-bullet.rejected {background: #ee4032}
+.color-pending {color: #FF9800}
+.color-expired, .color-rejected, .color-danger {color: #ee4032}
+.color-active, .color-confirmed, .color-success {color: #2ab732}
 
 .member, .ik-li {background: #fff; border-bottom: 1px solid #eee;display: block;float: left;padding: 10px;width: 100%;transition: border .1s;}
 .ik-li.clearfix {border-bottom: none}
@@ -123,7 +129,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 }
 .add-new-tile {float: left; padding: 10px 15px 5px 0}
 
-.ik-li .actions {margin-top: 7px}
+.ik-li .actions {margin-top: 7px;}
 
 .has-shade {box-shadow: 1px 1px 9px 4px rgba(0, 0, 0, .1)}
 .bottom-shade {box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .1)}
@@ -226,7 +232,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
         color: #555
     }
     .bottom-shade-xs {box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .1)}
-    .ik-li .date {position: absolute; margin-left: -63px}
+    .ik-li .date {position: absolute; right: 6px}
 }
 @media (min-width: 768px) {
     .modal .actions {margin-top: 2em}
@@ -279,6 +285,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     .tiles .ik-li .glyphicon-edit {display: none}
     .nav > .tab > a {padding: 10px 15px}
     .ik-li .date {float: right}
+    .payment-method {display: inline}
 }
 @media (min-width: 992px) {
     .tiles {margin-left: -15px}
