--- a/static/ikwen/css/change-form.css
+++ b/static/ikwen/css/change-form.css
@@ -1,9 +1,10 @@
 /**
-    Document   : app-retail
+    Document   : change-form
     Created on : May 29, 2017, 12:30
     Author     : Kom Sihon
     Description:
-        Rules for ikwen App Retail admin pages
+        Rules for ChangeObject ikwen admin pages
+        where change form is manually coded
 */
 
 .ik-li {padding: 5px 10px 0;}
