currency symbol is dynamically loaded

--- a/billing/templates/billing/public/pricing.html
+++ b/billing/templates/billing/public/pricing.html
@@ -49,7 +49,7 @@
                     <div class="product">
                         <h2 class="cost">
                             <span>{{ product.cost|floatformat:"0"|intcomma }}</span>
-                            <sup class="currency">XAF{{ CURRENCY.symbol }}</sup>
+                            <sup class="currency">{{ CURRENCY.symbol }}</sup>
                         </h2>
                         <p class="text-center name">
                             <strong class="text-muted">{{ product.duration_text }}</strong>
