--- a/billing/templates/billing/cloud_setup/settings.html
+++ b/billing/templates/billing/cloud_setup/settings.html
@@ -195,3 +195,9 @@ EMAIL_HOST_USER = ''
 EMAIL_HOST_PASSWORD = ''
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
+
+
+#  *******       LOGGING      *******  #
+import logging
+from ikwen.core.log import LOGGING
+logging.config.dictConfig(LOGGING)
